@@ -1,2 +1,2 @@
 SIMUPOP_VER = "snapshot"
-SIMUPOP_REV = "268:274M"
+SIMUPOP_REV = "268:275M"
